--- a/wp-content/themes/mc2015/css/_modules.sass
+++ b/wp-content/themes/mc2015/css/_modules.sass
@@ -418,6 +418,8 @@ article
 			content: '/'
 			display: inline-block
 			margin-right: 0.2em
+		&.lang-es
+			display: none
 
 .loader
 	background: url(ajax-loader.gif) center no-repeat
