Fix header overlaying admin bar

--- a/wp-content/themes/mc2015/css/styles.css
+++ b/wp-content/themes/mc2015/css/styles.css
@@ -1486,3 +1486,14 @@ article.artist.sticky .post-title {
     background: white;
     line-height: 88vh;
     height: 88vh; } }
+
+/* When logged in */
+.admin-bar .navigation-menu {
+  top: 32px;
+}
+
+@media screen and (max-width: 782px) {
+  .admin-bar .navigation-menu {
+    top: 46px;
+  }
+}
